<resources>
    <string name="app_name">accountability</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_chat">Chat</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_log">"LOG IN"</string>
    <string name="welcome_register">"REGISTER"</string>
    <string name="sign_in">"Sign In"</string>
    <string name="sign_out">"Sign Out"</string>
    <string name="register">"Register"</string>
    <string name="facebook_app_id">2630296930440945</string>
    <string name="fb_login_protocol_scheme">fb2630296930440945</string>
    <string name="facebook_client_token">4387b52031753ee786df87c7b388b861</string>

    <string name="send">Send</string>
    <string name="chat">Chat</string>
    <string name="send_request">Send Request</string>
    <string name="change_avatar">Change</string>
    <string name="e_mail">E-mail</string>
    <string name="age">Age</string>
    <string name="pro">Profession</string>
    <string name="avatar">Avatar</string>
    <string name="accept_button">Accept</string>
    <string name="accept_finish">Finish</string>
    <string name="history_button">History</string>
    <string name="find_accountant">Find An Accountant</string>
    <string name="user_request">User Request</string>
    <string name="reviews">Reviews</string>
    <string name="create_button">Create</string>
</resources>